--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     font-family: 'poppins', sans-serif;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #efefef;
 }
 
 nav {
@@ -10,10 +15,13 @@ nav {
     justify-content: space-between;
     background-color: rgb(27, 118, 255);
     padding: 5px 5%;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 .logo {
-    width: 160px;
+    width: 100px;
     margin-left: 45px;
 }
 
@@ -79,4 +87,160 @@ nav {
     right: 0;
     border-radius: 50%;
 
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 5%;
+}
+
+.left-sidebar {
+    flex-basis: 25%;
+    position: sticky;
+    top: 70%;
+    align-self: flex-start; 
+
+}
+
+
+.right-sidebar {
+    flex-basis: 25%;
+    position: sticky;
+    top: 70%;
+    align-self: flex-start;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    color: #626262;
+}
+
+.main-container {
+    flex-basis: 47%;
+}
+
+.imp-links a, .shortcut-link a {
+    display: flex;
+    text-decoration: none;
+    align-items: center;
+    margin-bottom: 30px;
+    color: #626262;
+    width: fit-content;
+}
+
+.imp-links img {
+    width: 20px;
+    margin-left: 15px;
+}
+
+.imp-links a:last-child {
+    color: #1876f2;
+}
+
+.imp-links {
+    border-bottom: 1px solid #ccc;
+}
+
+
+.shortcut-link img {
+    width: 40px;
+    border-radius: 4px;
+    margin-right: 15px;
+}
+
+.shortcut-link p {
+    margin: 25px 0;
+    color: #626262;
+    font-weight: 500;
+}
+
+.sidebar-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+
+.sidebar-title h4 {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.sidebar-title a {
+    text-decoration: none;
+    color: #1876f2;
+    font-size: 12px;
+}
+
+.event{
+    display: flex;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.left-event{
+    border-radius: 10px;
+    height: 65px;
+    width: 65px;
+    margin-right: 15px;
+    padding-top: 10px;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.1);
+}
+
+.left-event p,  {
+    font-size: 12px;
+}
+
+.left-event a, {
+    font-size: 12px;
+    text-decoration: none;
+}
+
+.left-event span {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #1876f2;
+    color: #fff;
+    font-size: 10px;
+    padding: 4px 0 ;
+}
+
+.sidebar-ads {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 4px;
+}
+
+.online-left {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.online-left .online img{
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.online-left .online {
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 20px;
+}
+
+.online-left .online::after{
+    top: unset;
+    bottom: 4px;
+}
+
+.online-left  p {
+    margin-left: 5px;
+    font-size: 15px;
+    font-weight: 600;  
 }
